# ansimate-ce

./: .cla-signers  .env.example  .eslintrc.json  .gitattributes  .gitignore  .yamllint  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.homelab.yml  docker-compose.no-traefik.yml  docker-compose.yml  ruff.toml
backend/: Dockerfile  auth.py  crypto.py  database.py  edition.py  email_helper.py  entitlements.py  extensions.py  limits.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  version.py
backend/ansible_plugins/become/: sudo.py
backend/gdpdu/: gdpdu-01-08-2002.dtd
docs/: ACCESSIBILITY.md  COMMUNITY.md  GRAPHIFY.md  PLAYBOOKS_VARIABLES.md
frontend/: .gitignore  Dockerfile  nginx.conf  package.json  strip-cloud-only.cjs  strip-html-comments.cjs  vite.config.js
images/: README.md
playbooks/: create-stack-7-days-to-die.yml  create-stack-abiotic-factor.yml  create-stack-actualbudget.yml  create-stack-adminer.yml  create-stack-ark-survival-evolved.yml  create-stack-astroneer.yml  create-stack-babybuddy.yml  create-stack-barotrauma.yml  create-stack-code-server.yml  create-stack-conan-exiles.yml  create-stack-convertx.yml  create-stack-core-keeper.yml  create-stack-counter-strike-2.yml  create-stack-ctfd.yml  create-stack-cyberchef.yml  create-stack-dashboard.yml  create-stack-dayz.yml  create-stack-dockman.yml  create-stack-dont-starve-together.yml  create-stack-eco.yml  create-stack-empyrion.yml  create-stack-enshrouded.yml  create-stack-euro-truck-simulator-2.yml  create-stack-excalidraw.yml  create-stack-factorio.yml  create-stack-filebrowser.yml  create-stack-fivem.yml  create-stack-gitea.yml  (+101 more)
(+29 files in other folders)
